chore(austin-residence): scroll center on mobile

--- a/index.html
+++ b/index.html
@@ -458,9 +458,22 @@
         font-size: 1.5rem;
       }
 
+      .hero-title .the {
+        margin-left: calc(-1 * (1.5rem + 0.3em));
+      }
+
       .hero-subtitle {
         font-size: 1rem;
         padding: 0 2rem;
+        margin-bottom: 4rem;
+      }
+
+      .scroll-indicator {
+        bottom: 4rem;
+        font-size: 0.75rem;
+        transform: translateX(-50%);
+        left: 50%;
+        width: max-content;
       }
 
       .principles-grid {
